# HealthCareAI

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  LICENSE  README.md  app_streamlit.py  docker-compose.yml  pyproject.toml  requirements.txt
.kiro/specs/srag-report-agent/: data-and-metrics.md  design.md  requirements.md  tasks.md
.kiro/steering/: constitution.md  structure.md  tech.md
docs/: auditoria.md  decisoes-arquiteturais.md
docs/architecture/: architecture.md
src/: config.py
src/agent/: graph.py  llm.py  news_agent.py  prompts.py  rag.py  state.py
src/agent/tools/: chart_tool.py  news_tool.py
src/api/: main.py  routes.py  security.py
src/db/: models.py  queries.py  reports_store.py
src/etl/: clean.py  download.py  load.py  seed.py
src/governance/: audit.py  usage.py
src/report/: composer.py  pdf.py
tests/: TEST_PLAN.md  conftest.py  test_agent_news.py  test_api.py  test_audit.py  test_charts.py  test_clean.py  test_compose.py  test_news_agent.py  test_pdf.py  test_queries.py  test_reports_store.py  test_seed.py  test_usage.py
