[project]
name = "healthcare-srag-agent"
version = "0.1.0"
description = "PoC: agente gerador de relatório de SRAG (Open DATASUS)"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
